--- a/codebase/CMakeLists.txt
+++ b/codebase/CMakeLists.txt
@@ -25,7 +25,5 @@ add_custom_target(CleanGenerated ALL
 add_dependencies(${PROJECT_NAME} CleanGenerated)
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-    $<TARGET_FILE:${PROJECT_NAME}>
-    "${CMAKE_SOURCE_DIR}/../codebase-dotnet/"
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${PROJECT_NAME}> "${CMAKE_SOURCE_DIR}/../codebase-dotnet/"
 )
